Scheduler timer now fires after the hour so that the correct up and down caps are chosen.

BUG: 131246


svn path=/trunk/extragear/network/ktorrent/; revision=565904